[tool.poetry]
name = "edx-cs50"
version = "0.1.0"
description = ""
authors = ["Mike Carifio <mike@carif.io>"]

[tool.poetry.dependencies]
python = "^3.7"
hypothesis = "^4.24"
attrdict = "^2.0"
fire = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
xonsh = {version = "^0.9.6",optional = true}
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
